--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<form id="search-form" name="search-form"onsubmit="return search()">
 			<div class="fieldcontainer">
 				<input type="search" id="query" class="search-field" placeholder="Search Youtube...">
-				<input type="submit" name="search-btn" id="search-btn" value="Search">
+				<input type="submit" name="search-btn" id="search-btn" value="">
 			</div>
 		</form>
 		<ul id="results"></ul>
