--- a/index.html
+++ b/index.html
@@ -8,19 +8,21 @@
 	<script src="js/script.js"></script>
 </head>
 <body>
-	<header>
-		<h1>Search<span>Youtube</span></h1>
-		<p>Search all Youtube videos</p>
-	</header>
-	<section>
-		<form id="search-form" name="search-form"onsubmit="return search()">
-			<div class="fieldcontainer">
-				<input type="search" id="query" class="search-field" placeholder="Search Youtube...">
-				<input type="submit" name="search-btn" id="search-btn" value="">
-			</div>
-		</form>
-		<ul id="results"></ul>
-		<div id="buttons"></div>
-	</section>
+	<div id="container">
+		<header>
+			<h1>Search<span>Youtube</span></h1>
+			<p>Search all Youtube videos</p>
+		</header>
+		<section>
+			<form id="search-form" name="search-form"onsubmit="return search()">
+				<div class="fieldcontainer">
+					<input type="search" id="query" class="search-field" placeholder="Search Youtube...">
+					<input type="submit" name="search-btn" id="search-btn" value="">
+				</div>
+			</form>
+			<ul id="results"></ul>
+			<div id="buttons"></div>
+		</section>
+	</div>
 </body>
 </html>
