--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Search Youtube</title>
+	<title>Youtube Search</title>
 	<link rel="stylesheet" href="css/style.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 	<script type='text/javascript' src='config.js'></script>
@@ -10,7 +10,7 @@
 <body>
 	<div id="container">
 		<header>
-			<h1>Search<span>Youtube</span></h1>
+			<h1>Youtube<span>Searcher</span></h1>
 			<p>Search all Youtube videos</p>
 		</header>
 		<section>
