--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 <head>
 	<title>Youtube Search</title>
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/jquery.fancybox.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 	<script type='text/javascript' src='config.js'></script>
 	<script src="js/script.js"></script>
+	<script src="js/jquery.fancybox.pack.js"></script>
+	<script>
+		$(document).ready(function(){
+			$(".fancybox").fancybox();
+		});
+	</script>
 </head>
 <body>
 	<div id="container">
